# spotify-playing-readme

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  package.json  pyproject.toml  schema.sql  tailwind.config.js  tox.ini
app/: __init__.py  __main__.py  app.py  callback.py  config.py  exceptions.py  login.py  templates.py  themes.py  theming.py  utils.py  view.py
app/core/: app.py
app/lib/: __init__.py  spotify.py  supabase.py
app/models/: __init__.py  requests.py  song.py  spotify.py  spotify_api.py  top_artists.py  top_tracks.py  user.py
app/routes/: __init__.py  auth.py  dashboard.py  health.py  image.py  index.py  spotify.py  user.py
app/templates/: base.html  callback.html  cb.html  cb.html.j2  customize.html  dashboard.html  error.html  index.html  spotify.apple.html.j2  spotify.default.html.j2  spotify.neon.html.j2  spotify.plain.html.j2  spotify.wavy.html.j2
app/templates/error/: error-svg.html.j2
app/templates/image/: spotify-playing.simple.html.j2  spotify-playing.wavy.html.j2
app/templates/partial/: navbar.html  svg-font.html.j2
app/utils/: css.py  dtype.py  image.py  oauth.py  song.py  spotify.py  themes.py  url.py
app/views/: __init__.py  auth.py  base.py  callback.py  login.py  view.py
sql/: init.sql
