[project]
name = "spotify-playing-readme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.1",
    "supabase>=2.25.1",
]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
]
lint = [
    "prek>=0.2.21",
    "ruff>=0.14.8",
]

[tool.poe.tasks]
dev = "fastapi dev app --reload"
ruff = "ruff check --fix ."
ruff-format = "ruff format ."
prek-setup = "prek install -f"
prek = "prek run"

[tool.ruff]
target-version = "py311"
line-length = 119

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # flake8-annotations
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN204", # Missing return type annotation for special method
  "ANN401", # `typing.Any` disallowed

  # pydocstyle
  "D",  # Disable all docstring checks

  # flake8-type-checking
  "TC001", # Move application imports used only for annotations into a type-checking block
  "TC002", # Move 3rd-party imports used only for annotations into a type-checking block
  "TC003", # Move standard library imports used only for annotations into a type-checking block

  "SIM108", # Use ternary operator instead of if-else-block

  "E731",    # Don't assign a lambda expression, use a def
  "S105",    # Hard-coded passwords
  "TRY003",  # No f-strings in raise statements
  "S311",    # Pseudo-random generator should not be used
  "FBT001",
  "FBT002",
  "EM",      # flake8-errmsg
]
